--- a/notebooks/801_chapter5.ipynb
+++ b/notebooks/801_chapter5.ipynb
@@ -1,25 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- chapter 5, page 160"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'base (Python 3.12.10)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n base ipykernel --update-deps --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -45,20 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'genai (Python 3.12.10)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n genai ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../src/genai_start')"
@@ -66,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1690,7 +1670,7 @@
        "  -0.0043141841888427734]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2473,7 @@
        " -0.009738525375723839]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2504,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2493,7 @@
        "768"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2538,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2547,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2536,7 @@
        "['cat', 'dog', 'computer', 'animal']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2567,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2576,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -5656,7 +5636,7 @@
        "  0.007155758794397116]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5667,7 +5647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5676,7 +5656,7 @@
        "4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7281,7 +7261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -8057,7 +8037,7 @@
        " 0.01545522641390562]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8855,7 +8835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -8864,7 +8844,7 @@
        "768"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8875,7 +8855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8886,7 +8866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8895,7 +8875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -8911,7 +8891,7 @@
        "        -0.00168946,  0.00715576]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8922,7 +8902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -8932,7 +8912,7 @@
        "       0.41791246])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8952,7 +8932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8961,7 +8941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8970,101 +8950,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_b5bf0_row0_col0, #T_b5bf0_row1_col1, #T_b5bf0_row2_col2, #T_b5bf0_row3_col3 {\n",
+       "#T_5ad9a_row0_col0, #T_5ad9a_row1_col1, #T_5ad9a_row2_col2, #T_5ad9a_row3_col3 {\n",
        "  background-color: #3b4cc0;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_b5bf0_row0_col1 {\n",
+       "#T_5ad9a_row0_col1 {\n",
        "  background-color: #f7b194;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b5bf0_row0_col2 {\n",
+       "#T_5ad9a_row0_col2 {\n",
        "  background-color: #d0473d;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_b5bf0_row0_col3 {\n",
+       "#T_5ad9a_row0_col3 {\n",
        "  background-color: #f7b396;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b5bf0_row1_col0 {\n",
+       "#T_5ad9a_row1_col0 {\n",
        "  background-color: #f49a7b;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b5bf0_row1_col2, #T_b5bf0_row2_col0, #T_b5bf0_row2_col1, #T_b5bf0_row2_col3 {\n",
+       "#T_5ad9a_row1_col2, #T_5ad9a_row2_col0, #T_5ad9a_row2_col1, #T_5ad9a_row2_col3 {\n",
        "  background-color: #b40426;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_b5bf0_row1_col3 {\n",
+       "#T_5ad9a_row1_col3 {\n",
        "  background-color: #f4c5ad;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b5bf0_row3_col0 {\n",
+       "#T_5ad9a_row3_col0 {\n",
        "  background-color: #f7a98b;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b5bf0_row3_col1 {\n",
+       "#T_5ad9a_row3_col1 {\n",
        "  background-color: #f1ccb8;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_b5bf0_row3_col2 {\n",
+       "#T_5ad9a_row3_col2 {\n",
        "  background-color: #c43032;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_b5bf0\">\n",
+       "<table id=\"T_5ad9a\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_b5bf0_level0_col0\" class=\"col_heading level0 col0\" >cat</th>\n",
-       "      <th id=\"T_b5bf0_level0_col1\" class=\"col_heading level0 col1\" >dog</th>\n",
-       "      <th id=\"T_b5bf0_level0_col2\" class=\"col_heading level0 col2\" >computer</th>\n",
-       "      <th id=\"T_b5bf0_level0_col3\" class=\"col_heading level0 col3\" >animal</th>\n",
+       "      <th id=\"T_5ad9a_level0_col0\" class=\"col_heading level0 col0\" >cat</th>\n",
+       "      <th id=\"T_5ad9a_level0_col1\" class=\"col_heading level0 col1\" >dog</th>\n",
+       "      <th id=\"T_5ad9a_level0_col2\" class=\"col_heading level0 col2\" >computer</th>\n",
+       "      <th id=\"T_5ad9a_level0_col3\" class=\"col_heading level0 col3\" >animal</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_b5bf0_level0_row0\" class=\"row_heading level0 row0\" >cat</th>\n",
-       "      <td id=\"T_b5bf0_row0_col0\" class=\"data row0 col0\" >0.000000</td>\n",
-       "      <td id=\"T_b5bf0_row0_col1\" class=\"data row0 col1\" >0.300103</td>\n",
-       "      <td id=\"T_b5bf0_row0_col2\" class=\"data row0 col2\" >0.401568</td>\n",
-       "      <td id=\"T_b5bf0_row0_col3\" class=\"data row0 col3\" >0.285108</td>\n",
+       "      <th id=\"T_5ad9a_level0_row0\" class=\"row_heading level0 row0\" >cat</th>\n",
+       "      <td id=\"T_5ad9a_row0_col0\" class=\"data row0 col0\" >0.000000</td>\n",
+       "      <td id=\"T_5ad9a_row0_col1\" class=\"data row0 col1\" >0.300103</td>\n",
+       "      <td id=\"T_5ad9a_row0_col2\" class=\"data row0 col2\" >0.401568</td>\n",
+       "      <td id=\"T_5ad9a_row0_col3\" class=\"data row0 col3\" >0.285108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b5bf0_level0_row1\" class=\"row_heading level0 row1\" >dog</th>\n",
-       "      <td id=\"T_b5bf0_row1_col0\" class=\"data row1 col0\" >0.300103</td>\n",
-       "      <td id=\"T_b5bf0_row1_col1\" class=\"data row1 col1\" >0.000000</td>\n",
-       "      <td id=\"T_b5bf0_row1_col2\" class=\"data row1 col2\" >0.436950</td>\n",
-       "      <td id=\"T_b5bf0_row1_col3\" class=\"data row1 col3\" >0.259910</td>\n",
+       "      <th id=\"T_5ad9a_level0_row1\" class=\"row_heading level0 row1\" >dog</th>\n",
+       "      <td id=\"T_5ad9a_row1_col0\" class=\"data row1 col0\" >0.300103</td>\n",
+       "      <td id=\"T_5ad9a_row1_col1\" class=\"data row1 col1\" >0.000000</td>\n",
+       "      <td id=\"T_5ad9a_row1_col2\" class=\"data row1 col2\" >0.436950</td>\n",
+       "      <td id=\"T_5ad9a_row1_col3\" class=\"data row1 col3\" >0.259910</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b5bf0_level0_row2\" class=\"row_heading level0 row2\" >computer</th>\n",
-       "      <td id=\"T_b5bf0_row2_col0\" class=\"data row2 col0\" >0.401568</td>\n",
-       "      <td id=\"T_b5bf0_row2_col1\" class=\"data row2 col1\" >0.436950</td>\n",
-       "      <td id=\"T_b5bf0_row2_col2\" class=\"data row2 col2\" >0.000000</td>\n",
-       "      <td id=\"T_b5bf0_row2_col3\" class=\"data row2 col3\" >0.417912</td>\n",
+       "      <th id=\"T_5ad9a_level0_row2\" class=\"row_heading level0 row2\" >computer</th>\n",
+       "      <td id=\"T_5ad9a_row2_col0\" class=\"data row2 col0\" >0.401568</td>\n",
+       "      <td id=\"T_5ad9a_row2_col1\" class=\"data row2 col1\" >0.436950</td>\n",
+       "      <td id=\"T_5ad9a_row2_col2\" class=\"data row2 col2\" >0.000000</td>\n",
+       "      <td id=\"T_5ad9a_row2_col3\" class=\"data row2 col3\" >0.417912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b5bf0_level0_row3\" class=\"row_heading level0 row3\" >animal</th>\n",
-       "      <td id=\"T_b5bf0_row3_col0\" class=\"data row3 col0\" >0.285108</td>\n",
-       "      <td id=\"T_b5bf0_row3_col1\" class=\"data row3 col1\" >0.259910</td>\n",
-       "      <td id=\"T_b5bf0_row3_col2\" class=\"data row3 col2\" >0.417912</td>\n",
-       "      <td id=\"T_b5bf0_row3_col3\" class=\"data row3 col3\" >0.000000</td>\n",
+       "      <th id=\"T_5ad9a_level0_row3\" class=\"row_heading level0 row3\" >animal</th>\n",
+       "      <td id=\"T_5ad9a_row3_col0\" class=\"data row3 col0\" >0.285108</td>\n",
+       "      <td id=\"T_5ad9a_row3_col1\" class=\"data row3 col1\" >0.259910</td>\n",
+       "      <td id=\"T_5ad9a_row3_col2\" class=\"data row3 col2\" >0.417912</td>\n",
+       "      <td id=\"T_5ad9a_row3_col3\" class=\"data row3 col3\" >0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1328ec6e0>"
+       "<pandas.io.formats.style.Styler at 0x12dcfad20>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9535,7 +9515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "genaitinkerers",
    "language": "python",
    "name": "python3"
   },
