--- a/notebooks/801_chatbot.ipynb
+++ b/notebooks/801_chatbot.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9075,30 +9082,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.documents import Document\n",
+    "from langchain.vectorstores import Chroma"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_core.documents import Document"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.vectorstores import Chroma\n",
-    "from langchain.vectorstores import FAISS\n",
-    "from langchain.vectorstores import Weaviate\n",
-    "from langchain.vectorstores import Milvus\n",
-    "from langchain.vectorstores import Qdrant\n",
-    "from langchain.vectorstores import ElasticVectorSearch\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9112,7 +9106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9121,16 +9115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_community.vectorstores.chroma.Chroma at 0x12b5cdc40>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "results = vectorstore.similarity_search(\"How do language models work?\", k=2)\n"
+    "vectorstore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -9140,50 +9145,14 @@
        " Document(metadata={'id': 'doc_3'}, page_content='Details about retrieval systems')]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_vector = \"How do language models work?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Chroma' object has no attribute 'query'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m similar_vectors = \u001b[43mvectorstore\u001b[49m\u001b[43m.\u001b[49m\u001b[43mquery\u001b[49m(query_vector, k)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Chroma' object has no attribute 'query'"
-     ]
-    }
-   ],
-   "source": [
-    "similar_vectors = vectorstore.query(query_vector, k)"
+    "results = vectorstore.similarity_search(\"How do language models work?\", k=2)\n",
+    "results\n"
    ]
   },
   {
@@ -9211,36 +9180,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'base (Python 3.12.10)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n base ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.document_loaders import TextLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = TextLoader(\"../data/README.md\")"
+    "loader = TextLoader(\"../documents/hello.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_community.document_loaders.text.TextLoader at 0x1321f6de0>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9249,7 +9227,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'source': '../documents/hello.txt'}, page_content='Milan is recognized as a leading alpha global city, with strengths in the fields of art, chemicals, commerce, design, education, entertainment, finance, healthcare, media (communication), services, research, and tourism and has been described as the fashion capital of the world.[15][16] Its business district hosts Italy\\'s stock exchange (Italian: Borsa Italiana), and the headquarters of national and international banks and companies. In terms of GDP, Milan is the wealthiest city in Italy, having also one of the largest economies among EU cities.[17][18] Milan is viewed along with Turin as the southernmost part of the Blue Banana urban development corridor (also known as the \"European Megalopolis\"), and one of the Four Motors for Europe. Milan is the 3rd city in Europe and the 11th city in the world by number of millionaires, with 115,000.[19] Milan is a major international tourist destination, appearing among the most visited cities in the world, ranking second in Italy after Rome, fifth in Europe and sixteenth in the world.[20][21] Milan is a major cultural centre, with museums and art galleries that include some of the most important collections in the world, such as major works by Leonardo da Vinci.[22][23] It also hosts numerous educational institutions, academies and universities, with 11% of the national total of enrolled students.[24][25]')]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9258,10 +9256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_community.vectorstores.chroma.Chroma at 0x13275fec0>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorstore_text_doc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -9281,13 +9292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.document_loaders import WikipediaLoader\n",
     "loader = WikipediaLoader(\"LangChain\")\n",
-    "documents = loader.load()"
+    "documents_wiki = loader.load()"
    ]
   },
   {
@@ -9301,7 +9312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9324,7 +9335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9333,21 +9344,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "words = [\"cat\", \"dog\", \"computer\", \"animal\"]\n",
-    "retriever = KNNRetriever.from_texts(words, GoogleGenerativeAIEmbeddings())"
+    "retriever = KNNRetriever.from_texts(words, GoogleGenerativeAIEmbeddings(model=\"models/embedding-001\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rs/82njg9p15j9ccf6dc3sxp0500000gn/T/ipykernel_6631/802568299.py:1: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  result = retriever.get_relevant_documents(\"dog\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={}, page_content='dog'),\n",
+       " Document(metadata={}, page_content='animal'),\n",
+       " Document(metadata={}, page_content='cat'),\n",
+       " Document(metadata={}, page_content='computer')]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result = retriever.get_relevant_documents(\"dog\")"
+    "result = retriever.get_relevant_documents(\"dog\")\n",
+    "result"
    ]
   },
   {
@@ -9374,11 +9408,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Develop a chatbot"
+   ]
   },
   {
    "cell_type": "markdown",
